2010-06-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/safeUroot.R: add 'check.conv' argument.

2010-05-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rstable1.R (rstable1C): use rstable1 := rstable1C
	and look at it --> do *NOT* pass gamma to C as it is sometimes a vector.
	* src/retstable.c (rstable_c, ...): corresponding changes

2010-05-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/retstable.c (retstable_c): with 'method', instead of
	retstable_MH_c() etc.
	* tests/retstable-ex.R (histSt): add first comparisons "MH"  <--> "LD"
	LD is much faster but looks wrong.


	* DESCRIPTION (Version): 0.3-0
	* R/aux-ACopula.R (retstableC): finally switch to retstableC()
	which now works; new 'method' argument, in tests only using
	retstable_MH at the moment.

	* tests/NAC-experi.R (print.chiSqChk_cop3d): need to allow P-value < 0.05
	* src/init.c (updates)

2010-05-03  Marius Hofert <marius.hofert@math.ethz.ch>

	* src/retstable.c (retstable_LD): Luc Devroye's algorithm for
	tilted stable added; fixed buglets; some renaming (after meeting
	with MM).
	* src/nacopula.h, src/init.c: renaming

2010-04-28  Marius Hofert <marius.hofert@math.ethz.ch>
2010-04-28  Martin Maechler <maechler@stat.math.ethz.ch>

	* src/retstable.c: new retstable() versions; but buggy, according
	to our distribution tests in tests/NAC-experi.R

2010-04-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-2
	* R/nacopula.R (onACopula), man/onACopula.Rd: a - correct -
	constructor for "outer_nACopula".
	* tests/NAC-experi.R: using onACopula() consequently.
	* ChangeLog: update it hugely (using svn2cl and much editing).

2010-04-09  Martin Maechler <maechler@stat.math.ethz.ch>

	* inst/doc/Makefile:
	  add Makefile for my convenience
	* tests/NAC-experi.R, tests/retstable-ex.R, tests/retstable_Nstat.rda:
	investigate #{calls} to rstable1(1, *)
	* R/aux-ACopula.R (retstable), src/retstable.c,..: retstable() C